--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,15 +1,24 @@
 Package: babelgene
 Type: Package
-Title: What the Package Does (Title Case)
+Title: Gene Orthologs for Model Organisms in a Tidy Data Format
 Version: 0.0.0.9000
 Authors@R: person("Igor", "Dolgalev", email = "igor.dolgalev@nyumc.org", role = c("aut", "cre"))
-Description: More about what it does (maybe more than one line)
-    Use four spaces when indenting paragraphs within the Description.
+Description: Genomic analysis of model organisms often requires the use of databases based on human data or making comparisons to patient-derived resources. This requires converting genes between human and non-human analogues. The babelgene R package provides predicted gene orthologs/homologs for frequently studied model organisms in an R-friendly tidy/long format. The package integrates orthology assertion predictions sourced from multiple databases as compiled by the HGNC Comparison of Orthology Predictions (HCOP) (Wright et al. 2005 <doi:10.1007/s00335-005-0103-2>, Eyre et al. 2007 <doi:10.1093/bib/bbl030>, Seal et al. 2011 <doi:10.1093/nar/gkq892>).
 License: MIT + file LICENSE
 Encoding: UTF-8
-LazyData: true
+URL: https://igordot.github.io/babelgene/
+BugReports: https://github.com/igordot/babelgene/issues
+Depends: 
+    R (>= 3.3)
+Imports: 
+    dplyr,
+    methods,
+    rlang
 Suggests: 
-    testthat (>= 3.0.0),
-    covr
+    covr,
+    knitr,
+    rmarkdown,
+    testthat (>= 3.0.0)
 Config/testthat/edition: 3
 RoxygenNote: 7.1.1
+VignetteBuilder: knitr
