--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -42,6 +42,7 @@ jobs:
 
       - uses: r-lib/actions/setup-r-dependencies@v1
         with:
+          cache-version: ${{ hashFiles('DESCRIPTION') }}
           extra-packages: rcmdcheck
 
       - uses: r-lib/actions/check-r-package@v1
